- moved security config - changed API - refactored authorization filter - added user specific companies attribute - enable jpa auto config
Signed-off-by: Alex <alexdicu09@yahoo.com>